fixed login assistance on firefox

--- a/static/assets/download.css
+++ b/static/assets/download.css
@@ -36,6 +36,7 @@ body {
   border-radius: 50%;
   float: left;
   position: absolute;
+  display: flex;
 }
 .outer {
   background: #FFFCDD;
